<resources>
    <string name="app_name">Higher-Lower</string>
    <string name="action_settings">Settings</string>
    <string name="app_explanation">Guess if the next throw is going to be lower, equal or higher.</string>
    <string name="lower">Lower</string>
    <string name="equals">Equals</string>
    <string name="higher">Higher</string>
    <string name="last_throw_default_text">Last throw: none</string>
    <string name="last_throw">Last throw: %d</string>
    <string name="dice">Dice</string>
    <string name="correct">Correct!</string>
    <string name="incorrect">Incorrect!</string>
</resources>
