<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HigherLowerActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/explanation">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView android:id="@+id/explanation"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/app_explanation"
              android:textStyle="bold"
              app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
    />

    <ImageView android:id="@+id/imageViewDice"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/dice1"
               android:contentDescription="@string/dice"
               app:layout_constraintTop_toBottomOf="@id/explanation"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintBottom_toTopOf="@id/buttonEquals"
    />

    <TextView android:id="@+id/textFieldLastThrow"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/last_throw_default_text"
              app:layout_constraintTop_toBottomOf="@id/imageViewDice"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
    />

    <Button
            android:id="@+id/buttonLower"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lower"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/buttonEquals"
            app:layout_constraintBottom_toBottomOf="parent"
    />

    <Button
            android:id="@+id/buttonEquals"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/equals"
            app:layout_constraintStart_toEndOf="@id/buttonLower"
            app:layout_constraintEnd_toStartOf="@id/buttonHigher"
            app:layout_constraintBottom_toBottomOf="parent"
    />

    <Button
            android:id="@+id/buttonHigher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/higher"
            app:layout_constraintStart_toEndOf="@id/buttonEquals"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
    />


</androidx.constraintlayout.widget.ConstraintLayout>